--- a/agriculture.html
+++ b/agriculture.html
@@ -19,7 +19,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item me-3">
-                        <a class="nav-link text-dark" href="home.html">Home</a>
+                        <a class="nav-link text-dark" href="index.html">Home</a>
                     </li>
                     <li class="nav-item dropdown me-3">
                         <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdown" role="button">
