--- a/agriculture.html
+++ b/agriculture.html
@@ -23,7 +23,7 @@
                     </li>
                     <li class="nav-item dropdown me-3">
                         <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdown" role="button">
-                            Categories
+                            Categoriess
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="history.html">History</a></li>
