--- a/about.html
+++ b/about.html
@@ -329,8 +329,8 @@
 <section id="founder-message" class="py-5">
     <div class="container">
       <h2 class="text-center mb-5 sectionsheader1">About the Founder</h2>
-      <div class="row align-items-center">
-        <div class="col-md-4 text-center">
+      <div class="row align-items-center founder-section">
+        <div class="col-md-4 text-center border-anim">
             <img src="css/img/emma.jpg" alt="Founder Photo" class="img-fluid rounded-circle shadow-lg" width="350" height="500">
           </div>
         <div class="col-md-8">
