--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 
                 <h3 style="color: #B22222;">What We Do</h3>
                 <p class="about-text">We facilitate one-on-one sessions and group discussions, allowing young people to engage with elders on various topics such as history, self-care, ancient medicine, and agriculture. Our platform not only promotes learning but also encourages intergenerational friendships and understanding.</p>
-                <button class="about-btn">Learn More &gt;&gt;</button>
+                <button class="about-btn"><a href="about.html">Learn More </a>&gt;&gt;</button>
             </div>
           </div>
           
