--- a/about.html
+++ b/about.html
@@ -13,13 +13,13 @@
 <body>
 </section> 
     <!-- Navbar Code -->
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top fade-in">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">Wisdom<span style="color: #B22222;">Connect </span></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
+            <div class="collapse navbar-collapse fade-in" id="navbarNav">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item me-3">
                         <a class="nav-link text-dark" href="index.html">Home</a>
@@ -54,23 +54,23 @@
             </div>
         </div>
     </nav>
- <section>  
-   <section class="about-header mt-5">
+</section>  
+   <section class="about-header mt-5 fade-in">
     <div class="header-text">       
-      <h1>About <span style="color: #B22222;">Us</span></h1>
-      <p>Connecting generations through stories, wisdom, and shared experiences. Our mission is to preserve the knowledge of the past and empower the youth of today.</p>
+      <h1 class="fade-in-delay">About <span style="color: #B22222;">Us</span></h1>
+      <p class="fade-in">Connecting generations through stories, wisdom, and shared experiences. Our mission is to preserve the knowledge of the past and empower the youth of today.</p>
     </div>
    </section>
 
-   <section class="about-section py-5 mt-2">
+   <section class="about-section py-5 mt-2 fade-in">
     <h2 class="sectionsheader">Our Story</h2>
         <div class="container">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-6 fade-in-delay">
                     <img src="css/img/our story.webp" alt="WisdomConnect" class="img-fluid">
                 </div>
 
-                <div class="col-md-6">
+                <div class="col-md-6 top">
                <h3>Bridging Generations for a Brighter Future</h3>
                <p>
                 At WisdomConnect, we saw the growing disconnect between generations and wanted to create a bridge where the wisdom of the past could be shared with the present. Our platform allows older adults to pass down valuable life lessons, wellness tips, and experiences to younger generations eager to learn. From our humble beginnings, we’ve grown into a community-driven space where both elders and youth can connect, learn, and share knowledge that enriches lives. As we look ahead, our mission remains clear: to preserve this precious wisdom and ensure it continues to shape the future for generations to come.</p>
@@ -80,7 +80,7 @@
         </div>
   </section>
 
-<section class="our-mission" class="py-5">
+<section class="our-mission" class="py-5 fade-in">
     <div class="container mission">
         <h2 class="text-center sectionsheader1">Our Mission</h2>
         <p class="lead text-center ">
@@ -90,7 +90,7 @@
 </section>
 
 <!-- How It Works Section -->
-<section id="how-it-works" class="py-5">
+<section id="how-it-works" class="py-5 fade-in">
     <div class="container">
         <h2 class="text-center sectionsheader1">How It Works</h2>
 
@@ -100,7 +100,7 @@
             <div class="col-md-4 mb-4">
                 <div class="card h-100">
                     <div class="card-body">
-                        <h5 class="card-title">Step 1: Sign Up</h5>
+                        <h5 class="card-title fade-in">Step 1: Sign Up</h5>
                         <p class="card-text">
                             Create your account by providing basic information. Whether you’re an elder looking to share your wisdom or a young learner eager to gain insights, signing up is quick and easy!
                         </p>
@@ -108,7 +108,7 @@
                 </div>
             </div>
 
-            <div class="col-md-4 mb-4">
+            <div class="col-md-4 mb-4 fade-in">
                 <div class="card h-100">
                     <div class="card-body">
                         <h5 class="card-title">Step 2: Explore Categories</h5>
@@ -119,7 +119,7 @@
                 </div>
             </div>
 
-            <div class="col-md-4 mb-4">
+            <div class="col-md-4 mb-4 fade-in">
                 <div class="card h-100">
                     <div class="card-body">
                         <h5 class="card-title">Step 3: Book a Session</h5>
@@ -132,7 +132,7 @@
         </div>
 
         <div class="row">
-            <div class="col-md-4 mb-4">
+            <div class="col-md-4 mb-4 fade-in">
                 <div class="card h-100">
                     <div class="card-body">
                         <h5 class="card-title">Step 4: Join the Session</h5>
@@ -143,7 +143,7 @@
                 </div>
             </div>
 
-            <div class="col-md-4 mb-4">
+            <div class="col-md-4 mb-4 fade-in">
                 <div class="card h-100">
                     <div class="card-body">
                         <h5 class="card-title">Step 5: Share Your Feedback</h5>
@@ -154,7 +154,7 @@
                 </div>
             </div>
 
-            <div class="col-md-4 mb-4">
+            <div class="col-md-4 mb-4 fade-in">
                 <div class="card h-100">
                     <div class="card-body">
                         <h5 class="card-title">Step 6: Stay Connected</h5>
@@ -169,7 +169,7 @@
 </section>
 
 <!-- FAQ Section -->
-<section id="faq" class="py-5">
+<section id="faq" class="py-5 fade-in-delay">
     <div class="container">
         <h2 class="text-center mb-4 sectionsheader1">Frequently Asked Questions</h2>
         
@@ -247,7 +247,7 @@
 
 
 <!-- Our Values Section -->
-<section id="our-values" class="py-5  our-values">
+<section id="our-values" class="py-5  our-values fade-in">
     <div class="container">
         <h2 class="text-center mb-4 sectionsheader1">Our Values</h2>
         <p class="lead text-center mb-4" style="font-family: sans-serif; color: #B22222; font-size: 17px;">
@@ -255,7 +255,7 @@
         </p>
 
         <div class="row">
-            <div class="col-md-4 mb-4">
+            <div class="col-md-4 mb-4 fade-in-delay">
                 <div class="card h-100">
                     <div class="card-body text-center">
                         <h5 class="card-title">Respect</h5>
@@ -266,7 +266,7 @@
                 </div>
             </div>
 
-            <div class="col-md-4 mb-4">
+            <div class="col-md-4 mb-4 fade-in-delay">
                 <div class="card h-100">
                     <div class="card-body text-center">
                         <h5 class="card-title">Empowerment</h5>
@@ -277,7 +277,7 @@
                 </div>
             </div>
 
-            <div class="col-md-4 mb-4">
+            <div class="col-md-4 mb-4 fade-in-delay">
                 <div class="card h-100">
                     <div class="card-body text-center">
                         <h5 class="card-title">Community</h5>
@@ -290,7 +290,7 @@
         </div>
 
         <div class="row">
-            <div class="col-md-4 mb-4">
+            <div class="col-md-4 mb-4 fade-in-delay">
                 <div class="card h-100">
                     <div class="card-body text-center">
                         <h5 class="card-title">Integrity</h5>
@@ -301,7 +301,7 @@
                 </div>
             </div>
 
-            <div class="col-md-4 mb-4">
+            <div class="col-md-4 mb-4 fade-in-delay">
                 <div class="card h-100">
                     <div class="card-body text-center">
                         <h5 class="card-title">Lifelong Learning</h5>
@@ -312,7 +312,7 @@
                 </div>
             </div>
 
-            <div class="col-md-4 mb-4">
+            <div class="col-md-4 mb-4 fade-in-delay">
                 <div class="card h-100">
                     <div class="card-body text-center">
                         <h5 class="card-title">Wisdom Sharing</h5>
@@ -326,14 +326,14 @@
     </div>
 </section>
 
-<section id="founder-message" class="py-5">
+<section id="founder-message" class="py-5 fade-in">
     <div class="container">
-      <h2 class="text-center mb-5 sectionsheader1">About the Founder</h2>
+      <h2 class="text-center mb-5 sectionsheader1 fade-in-delay">About the Founder</h2>
       <div class="row align-items-center founder-section">
         <div class="col-md-4 text-center border-anim">
             <img src="css/img/emma.jpg" alt="Founder Photo" class="img-fluid rounded-circle shadow-lg" width="350" height="500">
           </div>
-        <div class="col-md-8">
+        <div class="col-md-8 fade-in-delay-2">
           <p>
             I’m <strong>Ishola Emmanuel Ayobami</strong>, a dedicated software developer with a passion for connecting generations. I was part of the team that developed CradleCare, a startup focused on securely managing medical records for children from birth to age 17. Our innovative approach has garnered several awards in competitions across Nigeria, highlighting our commitment to improving child healthcare. 
         </p>
@@ -347,7 +347,7 @@
     </div>
   </section>
 
-  <section id="testimonials" class="py-5">
+  <section id="testimonials" class="py-5 fade-in">
     <div class="container">
       <p class="text-center" style=" font-family: 'Lora', serif; color: #B22222; font-size: 20px;">Testimonial</p>
         <h2 class="text-center mb-4 sectionsheader">What People Are Saying</h2>
@@ -393,16 +393,16 @@
     </div>
 </section>
 
-<footer class="footer bg-dark text-light py-4">
+<footer class="footer bg-dark text-light py-4 fade-in">
     <div class="container">
         <div class="row">
             <!-- About Section -->
-            <div class="col-md-4">
+            <div class="col-md-4 fade-in-delay">
                 <h5 class="mb-4 footer-header">About WisdomConnect</h5>
                 <p class="footer-text">WisdomConnect connects young people with elders to share knowledge and preserve wisdom. We believe in the power of intergenerational learning and cultural preservation.</p>
             </div>
 
-            <div class="col-md-4">
+            <div class="col-md-4 fade-in">
                 <h5 class="mb-4 footer-header">Quick Links</h5>
                 <ul class="list-unstyled">
                     <li><a href="home.html" class="text-light nav-link-footer">Home</a></li>
@@ -413,7 +413,7 @@
             </div>
 
             <!-- Contact Section -->
-            <div class="col-md-4 ">
+            <div class="col-md-4 fade-in-delay-2 ">
                 <h5 class="mb-4 footer-header">Contact Us</h5>
                 <p>Email: info@wisdomconnect.com</p>
                 <p>Phone: +234 9117942751</p>
@@ -425,7 +425,7 @@
                 </div>
             </div>
         </div>
-        <hr class="bg-light">
+        <hr class="bg-light top">
         <div class="text-center">
             <p>&copy; 2024 WisdomConnect. All Rights Reserved.</p>
         </div>
@@ -435,13 +435,54 @@
 
 
 
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Bootstrap JS and dependencies -->
+   
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://unpkg.com/scrollreveal"></script>
+<script>
+   ScrollReveal().reveal('.fade-in', {
+        duration: 1000,
+        distance: '50px',
+        origin: 'bottom',
+        easing: 'ease-in-out',
+        beforeReveal: function (el) {
+            el.classList.add('show');
+        }
+    });
+
+    ScrollReveal().reveal('.fade-in-delay', {
+        duration: 1000,
+        distance: '50px',
+        origin: 'left',
+        easing: 'ease-in-out',
+        easing: 'ease-in-out',
+        beforeReveal: function (el) {
+            el.classList.add('show');
+        }
+    });
+
+    ScrollReveal().reveal('.top', {
+        duration: 1000,
+        distance: '50px',
+        origin: 'top',
+        easing: 'ease-in-out',
+        easing: 'ease-in-out',
+        beforeReveal: function (el) {
+            el.classList.add('show');
+        }
+    });
+
+    ScrollReveal().reveal('.fade-in-delay-2', {
+        duration: 1000,
+        distance: '50px',
+        origin: 'right',
+        easing: 'ease-in-out',
+        easing: 'ease-in-out',
+        beforeReveal: function (el) {
+            el.classList.add('show');
+        }
+    });
+</script>
 
 </body>
 </html>
