--- a/about.html
+++ b/about.html
@@ -13,13 +13,13 @@
 <body>
 </section> 
     <!-- Navbar Code -->
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top fade-in">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">Wisdom<span style="color: #B22222;">Connect </span></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse fade-in" id="navbarNav">
+            <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item me-3">
                         <a class="nav-link text-dark" href="index.html">Home</a>
@@ -364,7 +364,7 @@
                 </div>
                 <div class="carousel-item">
                     <div class="testimonial-box text-center">
-                        <p>"Connecting with elders has been a wonderful experience. Their wisdom is invaluable."</p>
+                        <p>"Connecting with elders has been a wonderful experience. Their wisdom is valuable."</p>
                         <div class="d-flex align-items-center justify-content-center mt-3"> 
                             <img src="css/img/emma.jpg" alt="User 2" class="user-image">
                             <h5 class="username ml-2">Ishola Emmanuel</h5> 
