--- a/blog.html
+++ b/blog.html
@@ -22,13 +22,13 @@
   }
 </style>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top fade-in">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">Wisdom<span style="color: #B22222;">Connect</span></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse fade-in" id="navbarNav">
+            <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item me-3">
                         <a class="nav-link text-dark" href="index.html">Home</a>
