--- a/blogpage3.html
+++ b/blogpage3.html
@@ -9,13 +9,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top fade-in">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top ">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">Wisdom<span style="color: #B22222;">Connect</span></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse fade-in" id="navbarNav">
+            <div class="collapse navbar-collapse " id="navbarNav">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item me-3">
                         <a class="nav-link text-dark" href="index.html">Home</a>
@@ -254,7 +254,7 @@
      ScrollReveal().reveal('.fade-in-delay', {
          duration: 1000,
          distance: '50px',
-         origin: 'left',
+         origin: 'bottom',
          easing: 'ease-in-out',
          easing: 'ease-in-out',
          beforeReveal: function (el) {
@@ -265,7 +265,7 @@
      ScrollReveal().reveal('.top', {
          duration: 1000,
          distance: '50px',
-         origin: 'top',
+         origin: 'buttom',
          easing: 'ease-in-out',
          easing: 'ease-in-out',
          beforeReveal: function (el) {
@@ -276,7 +276,7 @@
      ScrollReveal().reveal('.fade-in-delay-2', {
          duration: 1000,
          distance: '50px',
-         origin: 'right',
+         origin: 'bottom',
          easing: 'ease-in-out',
          easing: 'ease-in-out',
          beforeReveal: function (el) {
