--- a/blogpage3.html
+++ b/blogpage3.html
@@ -45,7 +45,7 @@
                 <!-- Login and Register Links -->
                 <div class="login-register">
                     <a class="nav-link" href="login.html">Login</a>
-                    <a class="nav-link" href="sign-up.html">Sign-up</a>
+                    <a class="nav-link" href="mainRegistration.html">Sign-up</a>
                 </div>
             </div>
         </div>
@@ -65,7 +65,7 @@
             <div class="row">
                 <div class="col-md-8">
                     <div class="main-img-wrapper" style="background-color: #f9f9f9; border: 1px solid #ccc; padding: 10px; border-radius: 5px;">
-                        <img src="css/img/blog2.jpg" alt="Danafojura Masquerade" class="img-fluid my-4 main-img fade-in" style="max-width: 100%; height: auto; filter: brightness(0.6);">
+                        <img src="css/img/blog2.jpg" class="img-fluid my-4 fade-in main-img" style="max-width: 100%; filter: brightness(0.6);">
         
                         <p class="fade-in-delay"><strong>Effective pest and disease control</strong> is essential for sustainable farming. Modern agriculture often relies on chemical pesticides, but traditional methods like <strong>crop rotation</strong> and <strong>intercropping</strong> offer eco-friendly alternatives that improve soil health and biodiversity while reducing pest populations.</p>
                     
@@ -238,6 +238,10 @@
             </div>
         </div>
     </footer>
+
+    <a href="#" class="scroll-up" id="scrollUpButton">
+        <i class="bi bi-chevron-up"></i>
+    </a>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://unpkg.com/scrollreveal"></script>
 <script>
@@ -309,5 +313,24 @@
             });
         });
     </script>
+
+
+<script>
+    // Show the scroll-up button when scrolling down 100px
+    window.addEventListener('scroll', function() {
+        let scrollButton = document.getElementById('scrollUpButton');
+        if (window.scrollY > 100) {
+            scrollButton.style.display = 'block';
+        } else {
+            scrollButton.style.display = 'none';
+        }
+    });
+
+    // Smoothly scroll to the top when the button is clicked
+    document.getElementById('scrollUpButton').addEventListener('click', function(e) {
+        e.preventDefault();
+        window.scrollTo({ top: 0, behavior: 'smooth' });
+    });
+</script>
 </body>
 </html>
