--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <!-- Login and Register Links -->
                 <div class="login-register">
                     <a class="nav-link" href="login.html">Login</a>
-                    <a class="nav-link" href="sign-up.html">Sign-up</a>
+                    <a class="nav-link" href="mainRegistration.html">Sign-up</a>
                 </div>
             </div>
         </div>
@@ -315,53 +315,16 @@
         </div>
     </div>
 </footer>
+
+<a href="#" class="scroll-up" id="scrollUpButton">
+    <i class="bi bi-chevron-up"></i>
+</a>
+
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://unpkg.com/scrollreveal"></script>
-<script>
-   ScrollReveal().reveal('.fade-in', {
-        duration: 1000,
-        distance: '50px',
-        origin: 'bottom',
-        easing: 'ease-in-out',
-        beforeReveal: function (el) {
-            el.classList.add('show');
-        }
-    });
+<script src="js/home.js"></script>
 
-    ScrollReveal().reveal('.fade-in-delay', {
-        duration: 1000,
-        distance: '50px',
-        origin: 'left',
-        easing: 'ease-in-out',
-        easing: 'ease-in-out',
-        beforeReveal: function (el) {
-            el.classList.add('show');
-        }
-    });
-
-    ScrollReveal().reveal('.top', {
-        duration: 1000,
-        distance: '50px',
-        origin: 'top',
-        easing: 'ease-in-out',
-        easing: 'ease-in-out',
-        beforeReveal: function (el) {
-            el.classList.add('show');
-        }
-    });
-
-    ScrollReveal().reveal('.fade-in-delay-2', {
-        duration: 1000,
-        distance: '50px',
-        origin: 'right',
-        easing: 'ease-in-out',
-        easing: 'ease-in-out',
-        beforeReveal: function (el) {
-            el.classList.add('show');
-        }
-    });
-</script>
 
 </body>
 
