--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <!-- Main Navigation -->
         <ul class="nav-list">
             <li>
-                <a href="dashboard.html" class="res">
+                <a href="index.html" class="res">
                     <i class="bi bi-house-door"></i> Home 
                 </a>
                 <span class="menu-description">Track your home page and connections</span>
@@ -98,7 +98,7 @@
     
     <div class="sidebar">
         <ul class="nav-list">
-            <li><a href="dashboard.html"><i class="bi bi-house-door icon"></i><span class="link-name">Home</span></a></li>
+            <li><a href="index.html"><i class="bi bi-house-door icon"></i><span class="link-name">Home</span></a></li>
             <li><a href="Explore.html"><i class="bx bx-compass icon"></i><span class="link-name">Explore</span></a></li>
             <li><a href="#"><i class="bx bx-message-alt-detail icon"></i><span class="link-name">Messages</span></a></li>
             <li><a href="#"><i class="bx bxs-calendar-alt icon"></i><span class="link-name">Bookings</span></a></li>
@@ -139,7 +139,7 @@
     <!-- Bottom Navigation for Mobile and Tablet -->
 <div class="bottom-nav">
     <ul class="nav-list">
-        <li><a href="dashboard.html" class="home-link"><i class="bi bi-house-door "></i><span class="active-dot"></span></a></li>
+        <li><a href="index.html" class="home-link"><i class="bi bi-house-door "></i><span class="active-dot"></span></a></li>
         <li><a href="Explore.html" class="explore-link"><i class="bx bx-compass iconb"></i><span class="active-dot"></span></a></li>
         <li><a href="#" class="message-link"><i class="bx bx-message-alt-detail iconb"></i><span class="active-dot"></span></a></li>
         <li><a href="#" class="booking-link"><i class="bx bxs-calendar-alt iconb"></i><span class="active-dot"></span></a></li>
