--- a/notification.html
+++ b/notification.html
@@ -3,18 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bookings</title>
+    <link rel="icon" href="css/img/LOGO.jpg" type="image/x-icon">
+    <title>Notifications</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css">
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/notification.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="header">
         <div class="container-fluid">
             <div class="logo">
-                <a href="#" class="navbar-brand">Wisdom<span>Connect</span></a>
+                <a href="#" class="navbar-brand"><img src="css/img/LOGO.jpg" alt="">Wisdom<span>Connect</span></a>
             </div>
             <div class="menu-button">
                 <i class="bi bi-list" id="menuToggle"></i> <!-- Menu button for mobile -->
@@ -147,10 +148,15 @@
     </ul>
 </div>
 
+
+<div class="container">
+    <p>Notification</p>
+</div>
+
     
 
 
 
-<script src="js/header.js"></script>
+<script src="js/notification.js"></script>
 </body>
 </html>
