--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="header">
         <div class="container-fluid">
             <div class="logo">
-                <a href="#" class="navbar-brand">Wisdom<span>Connect</span></a>
+                <a href="#" class="navbar-brand"><img src="css/img/LOGO.jpg" alt="">Wisdom<span>Connect</span></a>
             </div>
             <div class="menu-button">
                 <i class="bi bi-list" id="menuToggle"></i> <!-- Menu button for mobile -->
@@ -27,8 +27,35 @@
             </div>
             <div class="header-icons">
                 <div class="noti">
-                    <i class="bi bi-bell notification"></i>
+                    <i class="bi bi-bell notification" id="notificationIcon"></i>
                     <span class="badge" id="notificationCount">4</span>
+                </div>
+                <div class="noti-dropdown" id="notiDropdown">
+                    <ul>
+                        <li>
+                            <div class="notif">
+                                <i class="bi bi-bell notification"></i>
+                            </div>
+                        </i><strong>Notification:</strong> <i class="bi bi-calendar-event-fill before-icon"></i> Your upcoming session with <b>Dr. Adebayo</b> is scheduled for tomorrow at 10 AM. <a href="#">View details</a></li>
+                        <li>
+                            <div class="notif">
+                                <i class="bi bi-bell notification"></i>
+                            </div>
+                            <strong>Notification:</strong> <i class="bi bi-check-circle-fill before-icon" ></i> Your session with <b>Prof. Williams</b> has been marked as completed. <a href="#">See summary</a></li>
+                        <li>
+                            <div class="notif">
+                                <i class="bi bi-bell notification"></i>
+                            </div>
+                            <strong>Notification:</strong> <i class="bi bi-clock-history before-icon"></i> You have a pending session with <b>Mrs. Johnson</b>. Confirm now. <a href="#">Confirm</a></li>
+                        <li>
+                            <div class="notif">
+                                <i class="bi bi-bell notification"></i>
+                            </div>
+                            <strong>Notification:</strong> <i class="bi bi-x-circle-fill before-icon"></i> Your session with <b>Mr. Ola</b> has been canceled. <a href="#">Check details</a></li>
+                    </ul>
+                    <div class="for-center">
+                        <a href="notification.html" class="all">view all Notification</a>
+                    </div>
                 </div>
                 <button class="btn btn-danger"><i class="bi bi-calendar-plus btn-icon"></i><a href="#">Book A Session</a></button>
             </div>
@@ -60,7 +87,7 @@
                 <span class="menu-description">Track your home page and connections</span>
             </li>
             <li>
-                <a href="Explore.html" class="res">
+                <a href="message.html" class="res">
                     <i class="bx bx-message-alt-detail"></i> Messages 
                 </a>
                 <span class="menu-description">View your messages and stay updated</span>
@@ -72,7 +99,7 @@
                 <span class="menu-description">Manage your personal connections</span>
             </li>
             <li>
-                <a href="#" class="res">
+                <a href="bookings.html" class="res">
                     <i class="bx bxs-calendar-alt"></i> Booking  </a>
                     <span class="menu-description">Book your sessions with mentors</span>
             </li>
@@ -100,8 +127,8 @@
         <ul class="nav-list">
             <li><a href="index.html"><i class="bi bi-house-door icon"></i><span class="link-name">Home</span></a></li>
             <li><a href="Explore.html"><i class="bx bx-compass icon"></i><span class="link-name">Explore</span></a></li>
-            <li><a href="#"><i class="bx bx-message-alt-detail icon"></i><span class="link-name">Messages</span></a></li>
-            <li><a href="#"><i class="bx bxs-calendar-alt icon"></i><span class="link-name">Bookings</span></a></li>
+            <li><a href="message.html"><i class="bx bx-message-alt-detail icon"></i><span class="link-name">Messages</span></a></li>
+            <li><a href="bookings.html"><i class="bx bxs-calendar-alt icon"></i><span class="link-name">Bookings</span></a></li>
             <li><a href="#"><i class="bi bi-people-fill icon"></i><span class="link-name">Connections</span></a></li>
         </ul>
     
@@ -141,8 +168,8 @@
     <ul class="nav-list">
         <li><a href="index.html" class="home-link"><i class="bi bi-house-door "></i><span class="active-dot"></span></a></li>
         <li><a href="Explore.html" class="explore-link"><i class="bx bx-compass iconb"></i><span class="active-dot"></span></a></li>
-        <li><a href="#" class="message-link"><i class="bx bx-message-alt-detail iconb"></i><span class="active-dot"></span></a></li>
-        <li><a href="#" class="booking-link"><i class="bx bxs-calendar-alt iconb"></i><span class="active-dot"></span></a></li>
+        <li><a href="message.html" class="message-link"><i class="bx bx-message-alt-detail iconb"></i><span class="active-dot"></span></a></li>
+        <li><a href="bookings.html" class="booking-link"><i class="bx bxs-calendar-alt iconb"></i><span class="active-dot"></span></a></li>
         <li><a href="#" class="search-link"><i class="bi bi-search icon"></i><span class="active-dot"></span></a></li>
     </ul>
 </div>
