--- a/Explore.html
+++ b/Explore.html
@@ -848,7 +848,7 @@
         <a href="#" class="footer-link">Explore</a>
       </div>
       <div class="footer-support">
-        <a href="#" class="footer-link">Join ADPList</a>
+        <a href="#" class="footer-link">Join WisdomConnect</a>
         <a href="#" class="footer-link">FAQs</a>
         <a href="#" class="footer-link">Help Center</a>
         <a href="#" class="footer-link">Partnerships</a>
