--- a/notification.html
+++ b/notification.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="css/img/LOGO.jpg" type="image/x-icon">
-    <title>Notifications</title>
+    <title>Notifications -WisdomConnect</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css">
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
@@ -103,7 +103,7 @@
             <li><a href="Explore.html"><i class="bx bx-compass icon"></i><span class="link-name">Explore</span></a></li>
             <li><a href="message.html"><i class="bx bx-message-alt-detail icon"></i><span class="link-name">Messages</span></a></li>
             <li><a href="bookings.html"><i class="bx bxs-calendar-alt icon"></i><span class="link-name">Bookings</span></a></li>
-            <li><a href="#"><i class="bi bi-people-fill icon"></i><span class="link-name">Connections</span></a></li>
+            <li><a href="connection.html"><i class="bi bi-people-fill icon"></i><span class="link-name">Connections</span></a></li>
         </ul>
     
         <div class="profile-container">
