--- a/Explore.html
+++ b/Explore.html
@@ -63,10 +63,26 @@
                       <a href="notification.html" class="all">view all Notification</a>
                   </div>
               </div>
-              <button class="btn btn-danger"><i class="bi bi-calendar-plus btn-icon"></i><a href="#">Book A Session</a></button>
+              <button class="btn btn-danger"><i class="bi bi-calendar-plus btn-icon"></i><a href="Explore.html">Book A Session</a></button>
           </div>
         </div>
     </header>
+
+    <div class="message-btn" id="messageIcon">
+      <i class="bi bi-chat-dots-fill"></i>
+  </div>
+
+  <!-- Message Box -->
+  <div class="message-box" id="messageBox">
+      <div class="message-header">
+          <i class="bi bi-chat-dots-fill"></i> Messages
+      </div>
+      <div class="message-content">
+          <i class="  bx bx-message-alt-detail"></i><br>
+          No messages
+          <p>Messages from the team will be shown here.</p>
+      </div>
+  </div>
 
     <div class="sliding-menu" id="slidingMenu">
         <!-- Cancel Icon -->
@@ -99,7 +115,7 @@
                 <span class="menu-description">View your messages and stay updated</span>
             </li>
             <li>
-                <a href="#" class="res">
+                <a href="connection.html" class="res">
                     <i class="bx bx-user"></i> My Connections 
                 </a>
                 <span class="menu-description">Manage your personal connections</span>
@@ -180,7 +196,7 @@
     </ul>
 </div>  
 
-<div class="container-fluid mt-5">
+<div class="container-fluid mt-5 explore">
 
   <div class="container">
     <div class="welcome-message">
@@ -219,13 +235,16 @@
   
             <!-- Filters Dropdown -->
             <div class="dropdown">
+              
               <button 
+              
                 class="btn btn-outline-secondary btn-lg dropdown-toggle" 
                 type="button" 
                 id="filterDropdown" 
                 data-bs-toggle="dropdown" 
                 aria-expanded="false"
               >
+              <i class="bi bi-filter" style="font-size: 20px;"></i>
                 Filters
               </button>
               <ul class="dropdown-menu" aria-labelledby="filterDropdown">
