--- a/message.html
+++ b/message.html
@@ -59,12 +59,28 @@
                         <a href="notification.html" class="all">view all Notification</a>
                     </div>
                 </div>
-                <button class="btn btn-danger"><i class="bi bi-calendar-plus btn-icon"></i><a href="#">Book A Session</a></button>
+                <button class="btn btn-danger"><i class="bi bi-calendar-plus btn-icon"></i><a href="Explore.html">Book A Session</a></button>
             </div>
             
             </div>
         </div>
     </header>
+
+    <div class="message-btn" id="messageIcon">
+        <i class="bi bi-chat-dots-fill"></i>
+    </div>
+
+    <!-- Message Box -->
+    <div class="message-box" id="messageBox">
+        <div class="message-header">
+            <i class="bi bi-chat-dots-fill"></i> Messages
+        </div>
+        <div class="message-content">
+            <i class="  bx bx-message-alt-detail"></i><br>
+            No messages
+            <p>Messages from the team will be shown here.</p>
+        </div>
+    </div>
 
     <div class="sliding-menu" id="slidingMenu">
         <!-- Cancel Icon -->
@@ -97,7 +113,7 @@
                 <span class="menu-description">View your messages and stay updated</span>
             </li>
             <li>
-                <a href="#" class="res">
+                <a href="connection.html" class="res">
                     <i class="bx bx-user"></i> My Connections 
                 </a>
                 <span class="menu-description">Manage your personal connections</span>
