--- a/bookings.html
+++ b/bookings.html
@@ -58,10 +58,26 @@
                         <a href="notification.html" class="all">view all Notification</a>
                     </div>
                 </div>
-                <button class="btn btn-danger"><i class="bi bi-calendar-plus btn-icon"></i><a href="#">Book A Session</a></button>
+                <button class="btn btn-danger"><i class="bi bi-calendar-plus btn-icon"></i><a href="Explore.html">Book A Session</a></button>
             </div>
         </div>
     </header>
+
+    <div class="message-btn" id="messageIcon">
+        <i class="bi bi-chat-dots-fill"></i>
+    </div>
+
+    <!-- Message Box -->
+    <div class="message-box" id="messageBox">
+        <div class="message-header">
+            <i class="bi bi-chat-dots-fill"></i> Messages
+        </div>
+        <div class="message-content">
+            <i class="  bx bx-message-alt-detail"></i><br>
+            No messages
+            <p>Messages from the team will be shown here.</p>
+        </div>
+    </div>
 
     <div class="sliding-menu" id="slidingMenu">
         <!-- Cancel Icon -->
@@ -94,7 +110,7 @@
                 <span class="menu-description">View your messages and stay updated</span>
             </li>
             <li>
-                <a href="#" class="res">
+                <a href="connection.html" class="res">
                     <i class="bx bx-user"></i> My Connections 
                 </a>
                 <span class="menu-description">Manage your personal connections</span>
@@ -175,7 +191,7 @@
     </ul>
 </div>
 
-<div class="container">
+<div class="container bookings">
     <h2 class="booking-header">Bookings</h2>
     <p class="sub-til">The session timings are following your local timezone Africa/Lagos Update</p>
     <!-- Custom Navigation -->
@@ -234,7 +250,7 @@
         <!-- You have no history bookings - start sharing a conversation with a mentor. -->
     </div>
 
-    <a href="#" class="explore-btn">Explore Mentors</a>
+    <a href="Explore.html" class="explore-btn">Explore Mentors</a>
   </div>
   
 
