--- a/connection.html
+++ b/connection.html
@@ -58,10 +58,26 @@
                         <a href="notification.html" class="all">view all Notification</a>
                     </div>
                 </div>
-                <button class="btn btn-danger"><i class="bi bi-calendar-plus btn-icon"></i><a href="#">Book A Session</a></button>
+                <button class="btn btn-danger"><i class="bi bi-calendar-plus btn-icon"></i><a href="Explore.html">Book A Session</a></button>
             </div>
         </div>
     </header>
+
+    <div class="message-btn" id="messageIcon">
+      <i class="bi bi-chat-dots-fill"></i>
+  </div>
+
+  <!-- Message Box -->
+  <div class="message-box" id="messageBox">
+      <div class="message-header">
+          <i class="bi bi-chat-dots-fill"></i> Messages
+      </div>
+      <div class="message-content">
+          <i class="  bx bx-message-alt-detail"></i><br>
+          No messages
+          <p>Messages from the team will be shown here.</p>
+      </div>
+  </div>
 
     <div class="sliding-menu" id="slidingMenu">
         <!-- Cancel Icon -->
@@ -94,7 +110,7 @@
                 <span class="menu-description">View your messages and stay updated</span>
             </li>
             <li>
-                <a href="#" class="res">
+                <a href="connection.html" class="res">
                     <i class="bx bx-user"></i> My Connections 
                 </a>
                 <span class="menu-description">Manage your personal connections</span>
@@ -176,7 +192,7 @@
 </div>
 
     
-<div class="container">
+<div class="container connection2">
    <div class="connections">
     <p class="title">My Connections</p>
     <p class="sub-title">Community members you've met and connected with will appear here. Click the profile to view your journey with a <br> member.</p>
