--- a/home.html
+++ b/home.html
@@ -24,14 +24,14 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light fixed-top ">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">Wisdom<span style="color: #B22222;">Connect</span></a>
+            <a class="navbar-brand" href="home.html">Wisdom<span style="color: #B22222;">Connect</span></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse " id="navbarNav">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item me-3">
-                        <a class="nav-link text-dark" href="index.html">Home</a>
+                        <a class="nav-link text-dark" href="home.html">Home</a>
                     </li>
                     <li class="nav-item dropdown me-3">
                         <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdown" role="button">
