--- a/Explore.html
+++ b/Explore.html
@@ -52,7 +52,7 @@
                           <div class="notif">
                               <i class="bi bi-bell notification"></i>
                           </div>
-                          <strong>Notification:</strong> <i class="bi bi-clock-history before-icon"></i> You have a pending session with <b>Mrs. Johnson</b>. Confirm now. <a href="#">Confirm</a></li>
+                          <strong>Notification:</strong> <i clas s="bi bi-clock-history before-icon"></i> You have a pending session with <b>Mrs. Johnson</b>. Confirm now. <a href="#">Confirm</a></li>
                       <li>
                           <div class="notif">
                               <i class="bi bi-bell notification"></i>
@@ -95,7 +95,7 @@
             <img src="css/img/emma.jpg" alt="Profile" class="profile-img">
             <div class="profile-info">
                 <p class="profile-name">Emmanuel Ayobami</p>
-                <a href="#" class="view-profile">View Profile</a>
+                <a href="Member-profile.html" class="view-profile">View Profile</a>
             </div>
         </div>
         
@@ -157,7 +157,7 @@
         <div class="profile-container">
             <img src="css/img/emma.jpg" alt="Profile" class="profile-pic1" id="profilePic">
             <div class="hover-options" id="hoverMenu" data-visible="false">
-                <a href="/profile" class="profile-link">
+                <a href="Member-profile.html" class="profile-link">
                     <img src="css/img/emma.jpg" alt="Profile" class="hover-profile-pic">
                     <div>
                         <span class="hover-profile-name">Emmanuel Ayobami</span>
@@ -369,7 +369,7 @@
   </section>
 
   <section class="container elders-profile-section">
-    <a href="#" class="card-link">
+    <a href="adultpro.html" class="card-link">
     <div class=" elder-card">
       <div class="elder-card-header">
         <img src="css/img/emma.jpg" alt="Elder's Photo" class="elder-photo" />
@@ -398,7 +398,7 @@
     </div>
   </a>
   
-  <a href="#" class="card-link">
+  <a href="adultpro.html" class="card-link">
     <div class=" elder-card">
       <div class="elder-card-header">
         <img src="css/img/PROGRAM.jpg" alt="Elder's Photo" class="elder-photo" />
@@ -427,7 +427,7 @@
     </div>
   </a>
 
-    <a href="#" class="card-link">
+    <a href="adultpro.html" class="card-link">
     <div class=" elder-card">
       <div class="elder-card-header">
         <img src="css/img/MARTIN.png" alt="Elder's Photo" class="elder-photo" />
@@ -456,7 +456,7 @@
     </div>
   </a>
 
-    <a href="#" class="card-link">
+    <a href="adultpro.html" class="card-link">
     <div class=" elder-card">
       <div class="elder-card-header">
         <img src="css/img/emma.jpg" alt="Elder's Photo" class="elder-photo" />
@@ -488,7 +488,7 @@
 
   
   <section class="container elders-profile-section">
-    <a href="#" class="card-link">
+    <a href="adultpro.html" class="card-link">
     <div class=" elder-card">
       <div class="elder-card-header">
         <img src="css/img/emma.jpg" alt="Elder's Photo" class="elder-photo" />
@@ -517,7 +517,7 @@
     </div>
   </a>
   
-  <a href="#" class="card-link">
+  <a href="adultpro.html" class="card-link">
     <div class=" elder-card">
       <div class="elder-card-header">
         <img src="css/img/adetola.jpg" alt="Elder's Photo" class="elder-photo" />
@@ -546,7 +546,7 @@
     </div>
   </a>
 
-    <a href="#" class="card-link">
+    <a href="adultpro.html" class="card-link">
     <div class=" elder-card">
       <div class="elder-card-header">
         <img src="css/img/MARTIN.png" alt="Elder's Photo" class="elder-photo" />
@@ -575,7 +575,7 @@
     </div>
   </a>
 
-    <a href="#" class="card-link">
+    <a href="adultpro.html" class="card-link">
     <div class=" elder-card">
       <div class="elder-card-header">
         <img src="css/img/MARTIN.png" alt="Elder's Photo" class="elder-photo" />
@@ -607,7 +607,7 @@
   
 
   <section class="container elders-profile-section">
-    <a href="#" class="card-link">
+    <a href="adultpro.html" class="card-link">
     <div class=" elder-card">
       <div class="elder-card-header">
         <img src="css/img/MARTIN.png" alt="Elder's Photo" class="elder-photo" />
@@ -636,7 +636,7 @@
     </div>
   </a>
   
-  <a href="#" class="card-link">
+  <a href="adultpro.html" class="card-link">
     <div class=" elder-card">
       <div class="elder-card-header">
         <img src="css/img/PROGRAM.jpg" alt="Elder's Photo" class="elder-photo" />
@@ -665,7 +665,7 @@
     </div>
   </a>
 
-    <a href="#" class="card-link">
+    <a href="adultpro.html" class="card-link">
     <div class=" elder-card">
       <div class="elder-card-header">
         <img src="css/img/PROGRAM.jpg" alt="Elder's Photo" class="elder-photo" />
@@ -694,7 +694,7 @@
     </div>
   </a>
 
-    <a href="#" class="card-link">
+    <a href="adultpro.html" class="card-link">
     <div class=" elder-card">
       <div class="elder-card-header">
         <img src="css/img/adetola.jpg" alt="Elder's Photo" class="elder-photo" />
@@ -726,7 +726,7 @@
   
 
   <section class="container elders-profile-section">
-    <a href="#" class="card-link">
+    <a href="adultpro.html" class="card-link">
     <div class=" elder-card">
       <div class="elder-card-header">
         <img src="css/img/PROGRAM.jpg" alt="Elder's Photo" class="elder-photo" />
@@ -755,7 +755,7 @@
     </div>
   </a>
   
-  <a href="#" class="card-link">
+  <a href="adultpro.html" class="card-link">
     <div class=" elder-card">
       <div class="elder-card-header">
         <img src="css/img/PROGRAM.jpg" alt="Elder's Photo" class="elder-photo" />
@@ -784,7 +784,7 @@
     </div>
   </a>
 
-    <a href="#" class="card-link">
+    <a href="adultpro.html" class="card-link">
     <div class=" elder-card">
       <div class="elder-card-header">
         <img src="css/img/MARTIN.png" alt="Elder's Photo" class="elder-photo" />
@@ -813,7 +813,7 @@
     </div>
   </a>
 
-    <a href="#" class="card-link">
+    <a href="adultpro.html" class="card-link">
     <div class=" elder-card">
       <div class="elder-card-header">
         <img src="css/img/adetola.jpg" alt="Elder's Photo" class="elder-photo" />
@@ -850,7 +850,7 @@
         <p class="footer-bio">Connecting generations to share wisdom and preserve knowledge for the future.</p>
       </div>
       <div class="footer-right">
-        <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
+        <a href="adultpro.html" class="social-icon"><i class="fab fa-facebook-f"></i></a>
         <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
         <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
         <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
