--- a/bookings.html
+++ b/bookings.html
@@ -90,7 +90,7 @@
             <img src="css/img/emma.jpg" alt="Profile" class="profile-img">
             <div class="profile-info">
                 <p class="profile-name">Emmanuel Ayobami</p>
-                <a href="#" class="view-profile">View Profile</a>
+                <a href="Member-profile.html" class="view-profile">View Profile</a>
             </div>
         </div>
         
@@ -152,7 +152,7 @@
         <div class="profile-container">
             <img src="css/img/emma.jpg" alt="Profile" class="profile-pic1" id="profilePic">
             <div class="hover-options" id="hoverMenu" data-visible="false">
-                <a href="/profile" class="profile-link">
+                <a href="Member-profile.html" class="profile-link">
                     <img src="css/img/emma.jpg" alt="Profile" class="hover-profile-pic">
                     <div>
                         <span class="hover-profile-name">Emmanuel Ayobami</span>
