--- a/login.html
+++ b/login.html
@@ -36,7 +36,7 @@
                     <button type="submit">Login</button>
                 </div>
                 
-                <p class="text-center">Don't have an account? <a href="sign-up.html">Register Here</a></p>
+                <p class="text-center">Don't have an account? <a href="adultreg.html">Register Here</a></p>
             </form>
         </div>
     </section>
