--- a/public/mainRegistration.html
+++ b/public/mainRegistration.html
@@ -29,7 +29,7 @@
                     <img src="css/img/adult.webp" alt="">
                     <h3 class="card-title text-danger fade-in top">Wise Mentor</h3>
                     <p class="card-text fade-in">As a Wise Mentor, you can share your knowledge in areas like history, self-care, ancient medicine, and agriculture. By leveraging your experiences, you can help the younger generation understand the importance of these subjects in today’s world, providing them with valuable insights that can enrich their lives and shape their perspectives.</p>
-                    <button class="btn btn-danger fade-in" onclick="location.href='adultreg.html'">Register as Adult</button>
+            
                 </div>
             </div>
         </div>
@@ -41,12 +41,15 @@
                     <p class="card-text fade-in">As an Aspiring Learner, you can learn from experienced elders in areas such as history, self-care, and personal development. By engaging with them, you gain valuable insights that can help shape your understanding of the world and enhance your life skills for future success.
 
                     </p>
-                    <button class="btn-danger fade-in" onclick="location.href='youthreg.html'">Register as Youth</button>
+                
                 </div>  
             </div>
         </div>
     </div>
 </div>
+
+ <a href="Registration.html" style="color: white; text-decoration: none;"><button class="btn-danger fade-in" >Register Now </button></a>
+   
 
 <a href="#" class="scroll-up" id="scrollUpButton">
     <i class="bi bi-chevron-up"></i>
