--- a/public/youthreg.html
+++ b/public/youthreg.html
@@ -13,7 +13,7 @@
     <nav>
         <div class="nav1">
         
-            <a class="logo text-center">Wisdom<span style="color: #B22222;">Connect</span></a>
+            <a class="logo text-center">WisdomI<span style="color: #B22222;">Connect</span></a>
         </div>
             
     </nav>
