--- a/public/mentee.html
+++ b/public/mentee.html
@@ -54,10 +54,10 @@
                             <strong>Notification:</strong> <i class="bi bi-x-circle-fill before-icon"></i> Your session with <b>Mr. Ola</b> has been canceled. <a href="#">Check details</a></li>
                     </ul>
                     <div class="for-center">
-                        <a href="notification.html" class="all">view all Notification</a>
+                        <a href="mentor-notification.html" class="all">view all Notification</a>
                     </div>
                 </div>
-                <button class="btn btn-danger"><i class="bi bi-calendar-plus btn-icon"></i><a href="Explore.html">Book A Session</a></button>
+                <button class="btn btn-danger"><i class="bi bi-calendar-plus btn-icon"></i><a href="mentor-booking.html">Book A Session</a></button>
             </div>
         </div>
         </div>
@@ -90,7 +90,7 @@
         <div class="profile-section">
             <img src="css/img/emma.jpg" alt="Profile" class="profile-img">
             <div class="profile-info">
-                <p class="profile-name">Emmanuel Ayobami</p>
+                <p class="profile-name">loading.....</p>
                 <a href="#" class="view-profile">View Profile</a>
             </div>
         </div>
@@ -99,25 +99,25 @@
         <!-- Main Navigation -->
         <ul class="nav-list">
             <li>
-                <a href="index.html" class="res">
+                <a href="mentor-dashboard.html" class="res">
                     <i class="bi bi-house-door"></i> Home 
                 </a>
                 <span class="menu-description">Track your home page and connections</span>
             </li>
             <li>
-                <a href="message.html" class="res">
+                <a href="mentor-message.html" class="res">
                     <i class="bx bx-message-alt-detail"></i> Messages 
                 </a>
                 <span class="menu-description">View your messages and stay updated</span>
             </li>
             <li>
-                <a href="#" class="res">
+                <a href="mentor-connection.html" class="res">
                     <i class="bx bx-user"></i> My Connections 
                 </a>
                 <span class="menu-description">Manage your personal connections</span>
             </li>
             <li>
-                <a href="#" class="res">
+                <a href="mentor-booking.html" class="res">
                     <i class="bx bxs-calendar-alt"></i> Booking  </a>
                     <span class="menu-description">Book your sessions with mentors</span>
             </li>
@@ -143,11 +143,11 @@
     
     <div class="sidebar">
         <ul class="nav-list">
-            <li><a href="index.html"><i class="bi bi-house-door icon"></i><span class="link-name">Home</span></a></li>
-            <li><a href="Explore.html"><i class="bx bx-compass icon"></i><span class="link-name">Explore</span></a></li>
-            <li><a href="message.html"><i class="bx bx-message-alt-detail icon"></i><span class="link-name">Messages</span></a></li>
-            <li><a href="bookings.html"><i class="bx bxs-calendar-alt icon"></i><span class="link-name">Bookings</span></a></li>
-            <li><a href="#"><i class="bi bi-people-fill icon"></i><span class="link-name">Connections</span></a></li>
+            <li><a href="mentor-dashboard.html"><i class="bi bi-house-door icon"></i><span class="link-name">Home</span></a></li>
+            <!-- <li><a href="men.html"><i class="bx bx-compass icon"></i><span class="link-name">Explore</span></a></li> -->
+            <li><a href="mentor-message.html"><i class="bx bx-message-alt-detail icon"></i><span class="link-name">Messages</span></a></li>
+            <li><a href="mentor-booking.html"><i class="bx bxs-calendar-alt icon"></i><span class="link-name">Bookings</span></a></li>
+            <li><a href="mentor-connection.html"><i class="bi bi-people-fill icon"></i><span class="link-name">Connections</span></a></li>
         </ul>
     
         <div class="profile-container">
@@ -156,7 +156,7 @@
                 <a href="Member-profile.html" class="profile-link">
                     <img src="css/img/emma.jpg" alt="Profile" class="hover-profile-pic">
                     <div>
-                        <span class="hover-profile-name">Emmanuel Ayobami</span>
+                        <span class="hover-profile-name">loading.....</span>
                         <span class="view-profile">View Profile</span>
                     </div>
                 </a>
@@ -173,7 +173,7 @@
                     <li><a href="#"><i class="bi bi-play-circle"></i> Watch tutorial</a></li>
                     <li><a href="#"><i class="bi bi-gear"></i> Settings</a></li>
                     <li><a href="#"><i class="bi bi-info-circle"></i> Support</a></li>
-                    <li><a href="#"><i class="bi bi-box-arrow-right"></i> Logout</a></li>
+                    <li><a href="#" class="res"><i class="bi bi-box-arrow-right"></i> Logout</a></li>
                 </ul>
             </div>
         </div>
